--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,8 @@
 {
   "name": "qis-web",
   "compatibility_date": "2026-01-28",
+  "main": "./dist/_worker.js",
   "assets": {
-    "directory": "./dist"
+    "directory": "./dist/client"
   }
 }
