--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,4 +1,5 @@
 {
   "name": "mah-web",
-  "compatibility_date": "2026-01-28"
+  "compatibility_date": "2026-01-28",
+  "main": "dist/_worker.js/index.js"
 }
