--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,6 @@
 {
   "name": "mah-web",
   "compatibility_date": "2026-01-28",
-  "main": "dist/_worker.js/index.js"
+  "main": "dist/_worker.js/index.js",
+  "compatibility_flags": ["nodejs_compat"]
 }
