--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^12.6.12",
+    "@astrojs/vercel": "^9.0.4",
     "@payloadcms/live-preview": "^3.76.0",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.15",
